--- a/overlays/development/deployment-patches.yaml
+++ b/overlays/development/deployment-patches.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: kanban-api
-          image: haeseung/kanban-server:1.0.10
+          image: haeseung/kanban-server:v1.0.21
