--- a/base/configmap.yaml
+++ b/base/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kanban-api-config
+  namespace: argocd
 data:
   SERVER_PORT: "3000"
   POSTGRESQL_HOST: "43.203.235.124"
